[XUI-1525] Fix logo size and clipping at small breakpoints

--- a/.kss/scss/redesign.scss
+++ b/.kss/scss/redesign.scss
@@ -1,3 +1,4 @@
+@import './vars';
 // Header
 
 .ds-xui-logo {
@@ -8,8 +9,8 @@
     text-indent: -9999em;
     margin: 0;
   }
-  @include xui-breakpoint-small-to-medium {
-    background-size: 40px;
+  @include xui-breakpoint-medium-down {
+    background-size: $ds-xui-logo-small-size;
     transform: translateY(-5%);
   }
 }
@@ -17,6 +18,9 @@
 .ds-nav--header .ds-xui-logo {
   flex: none;
   display: block;
+  @include xui-breakpoint-medium-down {
+    min-height: $ds-xui-logo-small-size;
+  }
   @include xui-breakpoint-medium-up {
     width: 100%;
     min-height: calc(20vh);
