--- a/.kss/scss/vars.scss
+++ b/.kss/scss/vars.scss
@@ -13,6 +13,7 @@ $ds-main-side-padding: calc(7 * (1vw + 1vh - 1vmin));
 $ds-shadow-border-top: 0 -1px 0 0 $xui-color-grey-alpha-6;
 $ds-shadow-border-bottom: 0 1px 0 0 $xui-color-grey-alpha-6;
 $ds-shadow-border-left: -1px 0 0 0 $xui-color-grey-alpha-6;
+$ds-xui-logo-small-size: 34px;
 
 // XUI variable abstraction
 $ds-html-bg-color: $xui-color-grey-6;
